PROD_10-24-19/force-app/main/default/objects/Sharing_History__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <length>18</length>
    <type>Text</type>
</CustomField>