PROD_10-24-19/force-app/main/default/objects/Sharing_History__c/fields/User_or_Group__c.field-meta.xml
<CustomField>
    <fullName>User_or_Group__c</fullName>
    <label>User or Group</label>
    <length>18</length>
    <type>Text</type>
</CustomField>